# ydb-rs-sqlx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/migrations/: 20240515182226_test.sql
cli/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
sqlx/: Cargo.toml
sqlx/examples/: simple.rs
sqlx/src/: arguments.rs  column.rs  connection.rs  database.rs  error.rs  executor.rs  lib.rs  query.rs  row.rs  statement.rs  transaction.rs  typeinfo.rs  value.rs
sqlx/src/connection/: connection_impl.rs  mod.rs
tests/: Cargo.toml
tests/src/: connect.rs  lib.rs
ydb-sqlx/: Cargo.toml  explain_example.txt
ydb-sqlx/src/: any.rs  arguments.rs  column.rs  database.rs  error.rs  lib.rs  migration.rs  query.rs  row.rs  statement.rs  transaction.rs  typeinfo.rs  types.rs  value.rs
ydb-sqlx/src/connection/: connection_impl.rs  executor.rs  mod.rs  schema_executor.rs
ydb-sqlx/src/minikql/: mod.rs
ydb-sqlx/src/types/: int.rs  mod.rs
