[package]
name = "sqlx-ydb"
version = "0.1.0"
edition = "2021"

[dependencies]
ydb-sqlx = { path = "../ydb-sqlx" }
sqlx-cli = "0.7"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
clap = { version = "4.3.10", features = ["derive", "env"] }
clap_complete = { version = "4.3.1", optional = true }
dotenvy = "0.15.0"
console = "0.15.0"
