[package]
name = "ydb-sqlx-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
ydb-sqlx = { path = "../ydb-sqlx" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3"
dotenvy = "0.15"
console = "0.15"
# clap = { version = "4.5", features = ["derive"] }
# anyhow = "1.0"
# chrono = "0.4"
