[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }
tracing-subscriber = "0.3"
tracing = "0.1"
ydb-rs-sqlx = { path = "../ydb-sqlx" }
