[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
sqlx = { version = "0.8", features = ["macros", "any", "runtime-tokio-rustls"] }
sqlx-core = { version = "0.8" }
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-log = "0.2"
ydb-sqlx = { path = "../ydb-sqlx" }
