[package]
name = "ydb-sqlx"
version = "0.1.0"
edition = "2021"
authors = ["mikhail <mikhail.a.nazarov@yandex.ru>"]
license = "Apache-2.0"
repository = "https://github.com/MikhailNazarov/ydb-rs-sqlx"
rust-version = "1.77"
description = "Sqlx intergration for ydb-rs-sdk"

[dependencies]
thiserror = "1"
async-trait = "0.1"
futures-util = "0.3"
itertools = "0.13"
sqlx-core = { version = "0.8" }
tracing = "0.1"
ydb = { git = "https://github.com/MikhailNazarov/ydb-rs-sdk.git", rev = "aa312d9ccf425ad41ffa8062a823c39e8ec0a664" }
url = "2.2"
futures-core = "0.3"
futures = "0.3"
rustring_builder = "0.2"
http = "0.2"
chrono = "0.4"

[features]
default = []
any = ["sqlx-core/any"]
