[package]
name = "ydb-sqlx"
version = "0.1.0"
edition = "2021"
authors = ["mikhail <mikhail.a.nazarov@yandex.ru>"]
license = "Apache-2.0"
repository = "https://github.com/MikhailNazarov/ydb-rs-sqlx"
rust-version = "1.77"
description = "Sqlx intergration for ydb-rs-sdk"

[dependencies]
thiserror = "2.0"
async-trait = "0.1"
futures-util = "0.3"
itertools = "0.14"
sqlx-core = { version = "0.8" }
tracing = "0.1"
ydb = { git = "https://github.com/MikhailNazarov/ydb-rs-sdk.git", rev = "79d97a8c2e8d3917b33412ff3f8daa35bb047623" }
url = "2.5"
futures-core = "0.3"
futures = "0.3"
rustring_builder = "0.2"
http = "0.2"
chrono = "0.4"

[features]
default = []
any = ["sqlx-core/any"]
